# Jormungandr

./: .gitignore  Jormungandr.sln  Jormungandr.yar  LICENSE  README.md
Example/: CMakeLists.txt  JormungandrExample.cpp
ExampleKernelCoff/: example.c
Jormungandr/: COFFLdr.cpp  COFFLdr.hpp  Jormungandr.cpp  Jormungandr.h  Jormungandr.inf  Jormungandr.vcxproj  Jormungandr.vcxproj.filters  JormungandrCommon.hpp  JormungandrHelper.cpp  JormungandrHelper.hpp  WindowsTypes.hpp
